# AUV-project-Simulation-Stack

./: README.md
Nvidia Isaac Sim/: AUV Design 2 sim ready 2 v4.mtl  SAUVC 2025 pool v11.mtl  SAUVC2025.usd
Nvidia Isaac Sim/isaac_underwater-main/: BUOYANCY_TEST.usd  ROV_TEST.usd  Water.usd
ros2_package_Gazebo/orca/: CMakeLists.txt  package.xml
ros2_package_Gazebo/orca/hooks/: orca.sh.in
ros2_package_Gazebo/orca/launch/: gz.launch.py
ros2_package_Gazebo/orca/scripts/: propeller_publisher.py
ros2_package_Gazebo/orca/worlds/: AUV.sdf  challange1.dae  challange2.dae  challange3.dae  challange4.dae  challange5.dae  orca.sdf  pool.dae  pool2.dae  propeller0.dae  propeller1.dae  propeller2.dae  propeller3.dae  propeller4.dae  propeller5.dae  water.dae
