<?xml version="1.0"?>
<package format="2">
	<name>orca</name>
	<version>1.0.1</version>
	<description>orca</description>

	<maintainer email="synerbotics@gmail.com">Gaurav Gupta</maintainer>
	<maintainer email="addeenmahbub@gmail.com">Devanshu Sharma</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>tty</exec_depend>
	<exec_depend>sys</exec_depend>
	<exec_depend>termios</exec_depend>
	
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>

	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
